feat: handtalk plugin

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="https://plugin.handtalk.me/web/latest/handtalk.min.js"></script>
     <script>
       var ht = new HT({
         token: "d6eb809f7d0ee83d378fa60180b0b70e",
